// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Situation loader Loader internals module result 1`] = `
Array [
  Array [
    Object {
      "monumentId": "c70dd3b7-50e9-43a1-bc87-80bf5bc3906a",
    },
  ],
]
`;

exports[`Situation loader Loader internals module result 2`] = `
Array [
  Array [
    Object {
      "monumentId": "c19e5938-24de-4d41-a6d3-e07d44878246",
    },
  ],
]
`;
